--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "kontra": "^9.0.0"
+    "kontra": "^9.0.0",
+    "pathfinding": "^0.4.18"
   }
 }
